# CryoAlign2

./: .gitignore  CMakeLists.txt  MpiContext.h  README.md  main.cpp  main_alignment.cpp  main_cryoalign.cpp  main_extract_keypoints.cpp
alignment/: CMakeLists.txt  CMakeLists~.txt  Registration.cpp  Registration.h  main~.cpp
database example/: datainfo.txt
database example/3085/: 3085_0.0306_5.00.txt  Points_3085_Key.xyz
database example/8551/: 8551_0.0197_5.00.txt  Points_8551_Key.xyz
database example/8553/: 8553_0.0253_5.00.txt  Points_8553_Key.xyz
database example/8587/: 8587_0.1_5.00.txt  Points_8587_Key.xyz
database example/8889/: 8889_0.0197_5.00.txt  Points_8889_Key.xyz
docker/: dockerfile
sample_cluster/: CMakeLists.txt  CMakeLists~.txt  Registration.h  VoxEM.cpp  VoxEM.h  main~.cpp
sample_cluster/vectorize/: main.c  mrc.c  mrc.h  sample_vectorize.c  sample_vectorize.h
script/: CreateDB.py  CryoSearch.py  Transform_map.py
